[gd_scene load_steps=2 format=3 uid="uid://dr885unyl3ek4"]

[ext_resource type="Script" path="res://Options.gd" id="1_itehh"]

[node name="Node2D" type="Node2D"]

[node name="MainMenu" type="Node2D" parent="."]
position = Vector2(14, 46)
script = ExtResource("1_itehh")

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
offset_left = -326.0
offset_top = -214.0
offset_right = 1227.0
offset_bottom = 721.0
metadata/_edit_use_anchors_ = true

[node name="OptionsButton2" type="Button" parent="MainMenu"]
offset_left = 352.0
offset_top = 185.0
offset_right = 792.0
offset_bottom = 368.0
action_mode = 0
text = "Opcja 2
"
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="Button" parent="MainMenu"]
offset_left = 353.0
offset_top = 410.0
offset_right = 793.0
offset_bottom = 593.0
text = "Powr√≥t do menu
"
metadata/_edit_use_anchors_ = true

[node name="OptionsButton1" type="Button" parent="MainMenu"]
offset_left = 347.0
offset_top = -43.0
offset_right = 787.0
offset_bottom = 140.0
text = "Opcja 1"
metadata/_edit_use_anchors_ = true

[node name="TextEdit" type="TextEdit" parent="MainMenu"]
offset_left = 342.0
offset_top = -185.0
offset_right = 541.0
offset_bottom = -147.0
text = "Opcje
"
placeholder_text = "Gra

"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="MainMenu/OptionsButton2" to="MainMenu" method="_on_options_button_2_pressed"]
[connection signal="pressed" from="MainMenu/BackButton" to="MainMenu" method="_on_back_button_pressed"]
[connection signal="pressed" from="MainMenu/OptionsButton1" to="MainMenu" method="_on_options_1_button_pressed"]
